# hot-fuzz

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  cli.py  kill_fuzzer_container.sh  pylintrc  requirements.txt  run_fuzzer_container.sh  run_venv.sh  setup.cfg
fuzz/: cli.py  fuzzer.py  mutator.py  request.py
fuzz/config/: config.ini  config.py  fuzzlist.txt
fuzz/models/: README.md  expectations.json  template.json  tutorial.json
fuzz/test/: constants.json  example.json  example_expectations.json  example_states.txt  mockserver.py  test_fuzzer.py
scripts/: build.sh  setup.sh
test/: test_cli.py
