[metadata]
name = hot_fuzz
version = attr: fuzz.version.__version__

[options]
install_requires =
    pip == 20.1.1
    setuptools >= 46.0.0
    wheel <= 0.34.2, >= 0.29.0
    requests >= 2.13.0, < 3
    six >= 1.10.0, < 2
    slackclient >= 1.2.1, < 2
    websocket-client >= 0.47.0, < 1
    importlib.metadata >= 2.1.1, < 3
python_requires = >=3.5,<3.6

[options.extras_require]
testing =
    unittest-xml-reporting >= 2.1.0, < 3
    xmlrunner >= 1.7.7, < 2
    pylint >= 1.8.2, < 2
    pyflakes >= 1.6.0, < 2
    git-pylint-commit-hook >= 2.2.2, < 3
    coverage >= 4.5.1, < 5
    pycodestyle >= 2.3.1, < 3

[options.package_data]
hot_fuzz =
    util/

[options.entry_points]
console_scripts =
  hot-fuzz = fuzz.cli:main

[bdist_wheel]
universal = 1
